# CS757_FinalProject

./: .gitignore  CMakeLists.txt  Makefile  README.md
benchmark/: c1355.ckt  c1355.flst  c1355.ptn  c17.ckt  c17.ptn  c1908.ptn  c2670.flst  c2670.ptn  c3540.ckt  c3540.flst  c432.ckt  c432.flst  c432.ptn  c499.ckt  c499.ptn  c5315.flst  c5315.ptn  c7552.ckt
configs/: README.md  simple1.json  simple2.json  simple3.json
gpu_scheduler/: CMakeLists.txt  README.md
gpu_scheduler/include/: metrics.h  scheduler.h  task.h  workload.h
gpu_scheduler/include/src/kernels/: compute_bound.hpp  latency_sensitive.hpp  memory_bound.hpp
gpu_scheduler/include/src/schedulers/: fifo_scheduler.hpp  priority_scheduler.hpp
gpu_scheduler/src/: main.cpp  metrics.cpp
gpu_scheduler/src/kernels/: compute_bound.cu  latency_sensitive.cu  memory_bound.cu
gpu_scheduler/src/schedulers/: fifo_scheduler.cpp  priority_scheduler.cpp
include/: circuit_parser.h  metrics.h  workload.h
include/kernels/: compute_bound.hpp  latency_sensitive.hpp
include/src/kernels/: memory_bound.hpp
include/src/schedulers/: dependency_aware_scheduler.hpp
reports/: README.md  report_20260401_191647.md  report_balanced_0_b128.md  report_balanced_0_b32.md  report_balanced_0_b512.md  report_balanced_1_b128.md  report_balanced_1_b32.md  report_balanced_1_b512.md  report_imbalanced_2_b128.md  report_imbalanced_2_b32.md  report_imbalanced_2_b512.md  report_imbalanced_3_b128.md  report_imbalanced_3_b32.md  report_imbalanced_3_b512.md  report_imbalanced_4_b128.md  report_imbalanced_4_b32.md  report_imbalanced_4_b512.md  report_imbalanced_5_b128.md  report_imbalanced_5_b32.md  report_imbalanced_5_b512.md  report_simple1_20260402_162106.md  report_simple1_20260402_210333.md  report_simple2_20260402_162106.md  report_simple2_20260402_210333.md  report_simple3_20260402_162107.md  report_simple3_20260402_210334.md
scripts/: run_experiments.sh  sweep.sh
src/: circuit_parser.cpp  main.cpp  metrics.cpp  workload.cpp
src/kernels/: compute_bound.cu  memory_bound.cu
src/schedulers/: dependency_aware_scheduler.cpp  fifo_scheduler.cpp
